# poker-sim

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  UPDATES.md  firestore.rules  next.config.ts  package-lock.json  package.json  render.yaml
.claude/: launch.json  settings.local.json
.github/workflows/: engine.yml  keepalive.yml  node.yml  server.yml
cli/: README.md  ansi.ts  cards.ts  index.ts  logic.ts  net.ts  render.ts  tsconfig.json  types.ts
docs/: architecture-roadmap.md  persistence-setup.md  plan-migracion.md  qa-audit-2026-06-03.md  vision-roadmap.md  voice-setup.md
engine/: Cargo.toml  README.md
engine/src/: lib.rs
public/: manifest.json
server/: Dockerfile  README.md  go.mod
src/app/: globals.css  layout.tsx  page.tsx
src/components/: EquityPanel.tsx  HistoryPanel.tsx  Nav.tsx  StatsPanel.tsx
src/hooks/: useAudioDevices.ts  useAudioLevel.ts  useAuth.ts  useCardBack.ts  useChat.ts  useEquity.ts  useGameSocket.ts  useHandHistory.ts  useMicDevice.ts  useNormalGame.ts  useNormalRoom.ts  useOnlineHistory.ts  useOnlineRooms.ts  usePresenceMap.ts  useProfile.ts  useReactions.ts  useRoom.ts  useRoomHistory.ts  useServerGame.ts  useSound.ts  useTableChat.ts  useVoiceRoom.ts  useVoiceWebRTC.ts
src/lib/: betting.test.ts  betting.ts  brand.ts  chat.ts  confetti.ts  economy.test.ts  economy.ts  economyClient.ts  economyServer.ts  equityWasm.ts  evalParity.test.ts  firebase.ts  firebaseAdmin.ts  handHistory.ts  handHistoryServer.ts  handLabel.ts  handStats.test.ts  handStats.ts  normalRooms.ts  num.ts  (+16 more)
testdata/: eval-parity.json
(+95 files in other folders)
