[package]
name = "poker_engine"
version = "0.1.0"
edition = "2021"
description = "Texas Hold'em hand evaluator + equity engine, compiled to WebAssembly."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
# Doctests are disabled: the rustdoc test runner executes from the crate dir,
# which Windows App Control blocks under OneDrive (os error 4551). No doc-tests
# exist anyway — unit tests cover the logic.
doctest = false

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
